# voiceflip

./: .gitignore  MAKEFILE  NOTES.md  README.md  mkdocs.yml  pyproject.toml
docs/: checklist.md  index.md  planing.md  video_script.md
docs/adrs/: ADR-000-sample-doc.md  ADR-001-pragmatic-clean-architecture.md  ADR-002-hybrid-matching-strategy.md
